#3 made words bold
I've used the <strong> tag to bold few of the words (Names and main Text)

--- a/Asssignment 1/part1/markup_letter.html
+++ b/Asssignment 1/part1/markup_letter.html
@@ -25,13 +25,13 @@ Description: In this project I'm markingup a lettr which is incorrect,
 
 <address>
 <P align="right">
-Dr. Eleanor Gaye <br>
+<strong>Dr. Eleanor Gaye</strong> <br>
 Awesome Science faculty <br>
 University of Awesome <br>
 Bobtown, CA 99999, <br>
 USA <br>
-Tel: 123-456-7890 <br>
-Email: no_reply@example.com <br>
+<strong>Tel:</strong> 123-456-7890 <br>
+<strong>Email:</strong> no_reply@example.com <br>
 <br>
 20 January 2016
 </P>
@@ -39,7 +39,7 @@ Email: no_reply@example.com <br>
 
 <address>
 <p align="left" >
-Miss Eileen Dover <br>
+<strong>Miss Eileen Dover</strong> <br>
 4321 Cliff Top Edge <br>
 Dover, CT9 XXX <br>
 UK
