--- a/Asssignment 1/part1/markup_letter.html
+++ b/Asssignment 1/part1/markup_letter.html
@@ -76,7 +76,7 @@ the start dates for each one are as follows:
 <br>
 Please let me know if this is ok, and if so which start date you would prefer.<br>
 <br>
-You can find more information about important university dates on our website.<br>
+You can find more information about <a href="http://www.example.com" title="table of important university dates"> important university dates</a> on our website.<br>
 <br>
 
 <h2>
@@ -93,7 +93,7 @@ are as follows, in order of priority:
 
 
 <ul>
-<li>H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
+<li>H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
 <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the <br> 
     audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)</li>
 <li>HTML and CSS constructs for representing musical scores.</li>
@@ -136,11 +136,11 @@ Arctic robot dance<br>
      Later on however it was discovered that they were just moving like this because they were really cold.</dd>
 
 <br>
-For more of my research, see my exotic dance research page.<br>
+For more of my research, see my <a href="http://www.example.com" title="Dr Gaye's exotic dance research">exotic dance research page</a>.<br>
 <br>
 Yours sincerely,<br>
 <br>
 Dr Eleanor Gaye<br>
 <br>
-University of Awesome motto: "Be awesome to each other." -- The memoirs of Bill S Preston, Esq <br>
+University of Awesome motto: "Be awesome to each other." </q> -- <cite>The memoirs of Bill S Preston, <abbr title="Esquire">Esq</abbr>.</cite></p>
 <br>
