--- a/Asssignment 1/part1/markup_letter.html
+++ b/Asssignment 1/part1/markup_letter.html
@@ -11,136 +11,132 @@ Description: In this project I'm markingup a lettr which is incorrect,
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markup letter</title>
-</head>
-<body>
-        <p></p>
-        <p></p>
-</body>
-</html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Markup letter</title>
+    </head>
 
-<address>
-<P align="right">
-<strong>Dr. Eleanor Gaye</strong> <br>
-Awesome Science faculty <br>
-University of Awesome <br>
-Bobtown, CA 99999, <br>
-USA <br>
-<strong>Tel:</strong> 123-456-7890 <br>
-<strong>Email:</strong> no_reply@example.com <br>
-<br>
-20 January 2016
-</P>
-</address>
+    <body>
 
-<address>
-<p align="left" >
-<strong>Miss Eileen Dover</strong> <br>
-4321 Cliff Top Edge <br>
-Dover, CT9 XXX <br>
-UK
-</p>
-</address>
+        <address style="text-align: right;">
+        <strong>Dr. Eleanor Gaye</strong> <br>
+        Awesome Science faculty <br>
+        University of Awesome <br>
+        Bobtown, CA 99999, <br>
+        USA <br>
+        <strong>Tel:</strong> 123-456-7890 <br>
+        <strong>Email:</strong> no_reply@example.com <br>
+        <br>
+        20 January 2016
+        </address>
 
-<h2>
-Re: Eileen Dover university application 
-</h2>
+        <address style="text-align:left" >
+        <strong>Miss Eileen Dover</strong> <br>
+        4321 Cliff Top Edge <br>
+        Dover, CT9 XXX <br>
+        UK
+        </address>
 
-Dear Eileen, <br>
-<br>
+        <h2>
+        Re: Eileen Dover university application 
+        </h2>
 
-<p>
-Thank you for your recent application to join us at the University of Awesome's science
-faculty to study as part of your PhD next year. I will answer your questions one by one,
-in the following sections.
-</p>
+        Dear Eileen, <br>
+        <br>
 
-<h2>Starting dates</h2>
+        <p>
+        Thank you for your recent application to join us at the University of Awesome's science
+        faculty to study as part of your PhD next year. I will answer your questions one by one,
+        in the following sections.
+        </p>
 
-<p>
-We are happy to accommodate you starting your study with us at any time, 
-however it would suit us better if you could start at the beginning of a semester; 
-the start dates for each one are as follows:
-</p>
+        <h2>Starting dates</h2>
 
-<ul>
-<li>First semester: 9 September 2016</li>
-<li>Second semester: 15 January 2017</li>
-<li>Third semester: 2 May 2017</li>
-</ul>
+        <p>
+        We are happy to accommodate you starting your study with us at any time, 
+        however it would suit us better if you could start at the beginning of a semester; 
+        the start dates for each one are as follows:
+        </p>
 
-<br>
-Please let me know if this is ok, and if so which start date you would prefer.<br>
-<br>
-You can find more information about <a href="http://www.example.com" title="table of important university dates"> important university dates</a> on our website.<br>
-<br>
+        <ul>
+        <li>First semester: 9 September 2016</li>
+        <li>Second semester: 15 January 2017</li>
+        <li>Third semester: 2 May 2017</li>
+        </ul>
 
-<h2>
-Subjects of study
-</h2>
+        <br>
+        Please let me know if this is ok, and if so which start date you would prefer.<br>
+        <br>
+        You can find more information about <a href="http://www.example.com" title="table of important university dates"> important university dates</a> on our website.<br>
+        <br>
 
-<p>
-At the Awesome Science Faculty, we have a pretty open-minded research facility — as 
-long as the subjects fall somewhere in the realm of science and technology. You seem 
-like an intelligent, dedicated researcher, and just the kind of person we'd like to 
-have on our team. Saying that, of the ideas you submitted we were most intrigued by 
-are as follows, in order of priority:
-</p>
+        <h2>
+        Subjects of study
+        </h2>
+
+        <p>
+        At the Awesome Science Faculty, we have a pretty open-minded research facility — as 
+        long as the subjects fall somewhere in the realm of science and technology. You seem 
+        like an intelligent, dedicated researcher, and just the kind of person we'd like to 
+        have on our team. Saying that, of the ideas you submitted we were most intrigued by 
+        are as follows, in order of priority:
+        </p>
 
 
-<ul>
-<li>H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
-<li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the <br> 
-    audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)</li>
-<li>HTML and CSS constructs for representing musical scores.</li>
-</ul>
+        <ol>
+        <li>H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
+        <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the <br> 
+        audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)</li>
+        <li>HTML and CSS constructs for representing musical scores.</li>
+        </ol>
 
-<p>
-So please can you provide more information on each of these subjects, 
-including how long you'd expect the research to take, required staff 
-and other resources, and anything else you think we'd need to know? Thanks.
-</p>
+        <p>
+        So please can you provide more information on each of these subjects, 
+        including how long you'd expect the research to take, required staff 
+        and other resources, and anything else you think we'd need to know? Thanks.
+        </p>
 
-<h2>
-Exotic dance moves
-</h2>
+        <h2>
+        Exotic dance moves
+        </h2>
 
-<p>
-Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question,<br>
- my favourite dances are as follows, with definitions:
-</p>
+        <p>
+        Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question,<br>
+        my favourite dances are as follows, with definitions:
+        </p>
 
+        <dl>
+        <dt>Polynesian chicken dance</dt>
 
-Polynesian chicken dance<br>
-
-<dd>little known but very influential dance dating back as far as 300BC, 
-    a whole village would dance around in a circle like chickens, 
-    to encourage their livestock to be "fruitful".</dd>
+        <dd>little known but very influential dance dating back as far as 300BC, 
+        a whole village would dance around in a circle like chickens, 
+        to encourage their livestock to be "fruitful".</dd>
 
    
-Icelandic brownian shuffle<br>
-<dd>the Icelanders developed fire as a means of getting warm, they used 
-    to practice this dance, which involved huddling close together in a 
-    circle on the floor, and shuffling their bodies around in imperceptibly tiny, 
-    very rapid movements. One of my fellow students used to say that he thought 
-    this dance inspired modern styles such as Twerking.</dd>
+        <dt>Icelandic brownian shuffle</dt>
+        <dd>the Icelanders developed fire as a means of getting warm, they used 
+        to practice this dance, which involved huddling close together in a 
+        circle on the floor, and shuffling their bodies around in imperceptibly tiny, 
+        very rapid movements. One of my fellow students used to say that he thought 
+        this dance inspired modern styles such as Twerking.</dd>
 
-Arctic robot dance<br>
-<dd>interesting example of historic misinformation, English explorers 
-    in the 1960s believed to have discovered a new dance style characterized by "robotic",
-     stilted movements, being practiced by inhabitants of Northern Alaska and Canada. 
-     Later on however it was discovered that they were just moving like this because they were really cold.</dd>
+        <dt>Arctic robot dance</dt>
+        <dd>interesting example of historic misinformation, English explorers 
+        in the 1960s believed to have discovered a new dance style characterized by "robotic",
+        stilted movements, being practiced by inhabitants of Northern Alaska and Canada. 
+        Later on however it was discovered that they were just moving like this because they were really cold.</dd>
+        </dl>
 
-<br>
-For more of my research, see my <a href="http://www.example.com" title="Dr Gaye's exotic dance research">exotic dance research page</a>.<br>
-<br>
-Yours sincerely,<br>
-<br>
-Dr Eleanor Gaye<br>
-<br>
-University of Awesome motto: "Be awesome to each other." </q> -- <cite>The memoirs of Bill S Preston, <abbr title="Esquire">Esq</abbr>.</cite></p>
-<br>
+        <br>
+        For more of my research, see my <a href="http://www.example.com" title="Dr Gaye's exotic dance research">exotic dance research page</a>.<br>
+        <br>
+        Yours sincerely,<br>
+        <br>
+        Dr Eleanor Gaye<br>
+        <br>
+        <p>University of Awesome motto: <q>"Be awesome to each other."</q> -- <cite>The memoirs of Bill S Preston, <abbr title="Esquire">Esq</abbr>.</cite></p>
+        <br>
+    </body>
+</html>
