--- a/Asssignment 1/part2/index.html
+++ b/Asssignment 1/part2/index.html
@@ -12,14 +12,14 @@ Description: In this project am creating a bird watching website which
   <head>
     <meta charset="utf-8">
     <title>Birdwatching</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
   </head>
 
-  <body bgcolor="lightgreen">
+  <body>
 
 
       <h1>Birdwatching</h1>
