# 11 part one finished
I've checked all the tags and finished the part one of the assignment.

--- a/Asssignment 1/part1/markup_letter.html
+++ b/Asssignment 1/part1/markup_letter.html
@@ -14,7 +14,7 @@ Description: In this project I'm markingup a lettr which is incorrect,
     <head>
         
         <meta charset="utf-8">
-        <<meta name="author" content="Dr. Eleanor Gaye">
+        <meta name="author" content="Dr. Eleanor Gaye">
         <title>Markup letter</title>
 
         <style>
@@ -42,7 +42,7 @@ Description: In this project I'm markingup a lettr which is incorrect,
             p, li, dd, dt, address {
               line-height: 1.5;
             }
-          </style>
+        </style>
 
     </head>
 
