--- a/Asssignment 1/part2/index.html
+++ b/Asssignment 1/part2/index.html
@@ -1,9 +1,11 @@
 <!--
+
 Name: Adarsh Thekkekulathingal Kuriyachan
 File: markup_letter.html
 Date: 21 January 2024
 Description: In this project am creating a bird watching website which 
-             includes hyperlinks, photos and useful other  components
+             includes hyperlinks, photos and useful other  components, 
+             getting familiarize with different tags is the main idea of this assignment 
 
 -->
 
