# 15 added final footer tag to the last section of the part 2 bird watching website

--- a/Assignment 1/part2/index.html
+++ b/Assignment 1/part2/index.html
@@ -55,7 +55,7 @@ Description: In this project am creating a bird watching website which
 
       <footer><p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p></footer>
 
-      <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
+      <footer><p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p></footer>
   
   </body>
 </html>
