Finished adding comments

--- a/Assignment3/part1/biog-download.html
+++ b/Assignment3/part1/biog-download.html
@@ -1,3 +1,11 @@
+<!--
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: biog-download.html
+	Date: 16 February 2024
+	Description: The following project is an exampale for a biography page. Different properties of CSS 
+               are using in this project to create a good looking biography page.
+	-->
+
 <!doctype html>
 <html lang="en">
   <head>
