--- a/Assignment3/part2/index.html
+++ b/Assignment3/part2/index.html
@@ -1,3 +1,12 @@
+<!--
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: index.html
+	Date: 16 February 2024
+	Description: With the help of CSS, I've created a cool looking box. I've Utilized different functions of CSS to create this one
+               and applying that to this html.
+	-->
+
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
