--- a/Assignment3/part3/index.html
+++ b/Assignment3/part3/index.html
@@ -1,3 +1,13 @@
+<!--
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: index.html
+	Date: 16 February 2024
+	Description: The provided HTML and CSS establish the layout and styling for the homepage of an 
+               imaginary community college, featuring a three-column structure. Additional CSS 
+               will be appended to refine the page's appearance and functionality.
+	-->
+
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
