--- a/Assignment3/part4/index.html
+++ b/Assignment3/part4/index.html
@@ -1,3 +1,12 @@
+<!--
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: index.html
+	Date: 16 February 2024
+	Description: Using some raw html, basic CSS and images, i've designing a blog post page.
+               Basic of CSS are using to create the layout, using veriety of techniques.
+	-->
+
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
