--- a/Assignment3/part1/biog-download.html
+++ b/Assignment3/part1/biog-download.html
@@ -47,6 +47,13 @@
         text-decoration: none;
         color: green;
       }
+
+      
+      ul{
+        background-color: #eeeeee;
+        border: 5px solid purple;
+        padding: 2.5em;
+      }
     </style>
   </head>
 
