--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
  <a href="Assignment 1/index.html">Click to open Assignment 1</a>
  <a href="Assignment2/index.html">Click to open Assignment 2</a>
+ <a href="Assignment3/index.html">Click to open Assignment 3</a>
+
 
 </body>
 </html>
