--- a/Assignment4/part1/index.html
+++ b/Assignment4/part1/index.html
@@ -1,3 +1,11 @@
+<!--
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: index.html
+	Date: 20 March, 2024
+	Description: Creating a stroy generator using html and javascript. The different aspects of java
+               script are used in this.
+	-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
