--- a/Assignment4/part2/index.html
+++ b/Assignment4/part2/index.html
@@ -1,3 +1,10 @@
+<!--
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: index.html
+	Date: 20 March, 2024
+	Description: Creating an image gallery and getting more in depth idea about javascript. 
+	-->
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
