--- a/Assignment4/part4/index-finished.html
+++ b/Assignment4/part4/index-finished.html
@@ -1,3 +1,10 @@
+<!--
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: index-finished.html
+	Date: 20 March, 2024
+	Description: Using javascript, adding different features to bouncing balls. 
+	-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
