--- a/Assignment4/part3/index.html
+++ b/Assignment4/part3/index.html
@@ -1,3 +1,10 @@
+<!--
+	Name: Adarsh Thekkekulathingal Kuriyachan
+	File: index.html
+	Date: 20 March, 2024
+	Description: Using Javascript creating some bouncing balls, exploring different properties of the language. 
+	-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
