--- a/Assignment5/part1/index.html
+++ b/Assignment5/part1/index.html
@@ -1,3 +1,10 @@
+<!--
+Name: Adarsh Thekkekulathingal Kuriyachan
+Date: 15 - 04 - 2024
+File: index.html
+Description: Main aim is to dive into the world of accessibility and fixing the issues in the code.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
