--- a/Assignment5/part1/index.html
+++ b/Assignment5/part1/index.html
@@ -120,19 +120,19 @@ Description: Main aim is to dive into the world of accessibility and fixing the 
         </aside>
         
         <section class="comments">
-          <div class="show-hide">Show comments</div>
+          <button class="show-hide">Show comments</button>
 
           <div class="comment-wrapper">
 
-            <font size="6">Add comment</font>
+            <h2>Add comment</h2>
 
             <form class="comment-form">
               <div class="flex-pair">
-                Your name:
+                <label for="name">Your name:</label>
                 <input type="text" name="name" id="name" placeholder="Enter your name">
               </div>
               <div class="flex-pair">
-                Your comment:
+                <label for="comment">Your comment:</label>
                 <input type="text" name="comment" id="comment" placeholder="Enter your comment">
               </div>
               <div>
@@ -140,7 +140,7 @@ Description: Main aim is to dive into the world of accessibility and fixing the 
               </div>
             </form>
 
-            <font size="6">Comments</font>
+            <h2>Comments</h2>
 
             <ul class="comment-container">
 
