Finishing the errors in the html file.

--- a/Assignment5/part1/index.html
+++ b/Assignment5/part1/index.html
@@ -159,7 +159,7 @@ Description: Main aim is to dive into the world of accessibility and fixing the 
       </article>
 
       <div class="secondary">
-        <font size="6">Related</font>
+        <h2>Related</h2>
 
         <ul>
           <li><a href="#">The trouble with Bees</a></li>
