Pushing to Github

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <a href="Assignment2/index.html">Click to open Assignment 2</a>
  <a href="Assignment3/index.html">Click to open Assignment 3</a>
  <a href="Assignment4/index.html">Click to open Assignment 4</a>
+ <a href="Assignment5/index.html">Click to open Assignment 5</a>
 
 </body>
 </html>
